k8s/web-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: flet-montrg
  labels:
    app: web-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30012
    protocol: TCP
  selector:
    app: web-service
